opam-version: "2.0"
name: "tester"
version: "1.0"
synopsis: "Tester testing framework"
description: """
tester is a unit test framework for OCaml. It allows the easy creation of
unit tests for OCaml code. It is somewhat based on [OUnit2], another unit
testing framework for OCaml. However, its output can be customized per
test case, and it is easier to see whether a case has passed or failed.
"""
maintainer: "Nikunj Chawla <nikchawla312@gmail.com>"
authors: "Nikunj Chawla <nikchawla312@gmail.com>"
homepage: "https://github.com/nik312123/tester"
dev-repo: "git+https://github.com/nik312123/tester.git"
bug-reports: "https://github.com/nik312123/tester/issues"
doc: "https://nik312123.github.io/ocamlLibDocs/tester/Tester/"
depends: [
    "ocaml" {>= "4.08.1"}
    "dune" {>= "2.7.1"}
    "base-bytes"
    "base-unix"
]
build: [
    ["dune" "build" "-p" name "-j" jobs]
    ["dune" "runtest" "-p" name "-j" jobs] {with-test}
    ["dune" "build" "@doc" "-p" name "-j" jobs] {with-doc}
]
